--- a/additional_notebooks/ig_mask.ipynb
+++ b/additional_notebooks/ig_mask.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 19387,
@@ -48,24 +48,15 @@
     },
     "id": "Fd6u4OUwrBhD"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/andrea/anaconda3/envs/polar_lows_dl/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "import cv2\n",
     "from pathlib import Path\n",
     "\n",
-    "root_dir = Path('..').resolve() # resolve() is used to get the absolute path of the directory\n",
-    "sys.path.insert(0, str(root_dir))\n",
+    "root = Path('..').resolve() # resolve() is used to get the absolute path of the directory\n",
+    "sys.path.insert(0, str(root))\n",
     "\n",
     "import numpy as np\n",
     "import random\n",
@@ -80,16 +71,6 @@
     "from image_utility import normalize_image\n",
     "from model_container import ModelContainer\n",
     "from models import XceptionModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_prefix = '../'\n",
-    "root = Path(path_prefix)"
    ]
   },
   {
@@ -117,12 +98,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/andrea/anaconda3/envs/polar_lows_dl/lib/python3.12/site-packages/torch/utils/data/dataloader.py:617: UserWarning: This DataLoader will create 6 worker processes in total. Our suggested max number of worker in current system is 4, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-      "  warnings.warn(\n",
-      "/home/andrea/anaconda3/envs/polar_lows_dl/lib/python3.12/site-packages/timm/models/_factory.py:117: UserWarning: Mapping deprecated model name xception to current legacy_xception.\n",
-      "  model = create_fn(\n",
-      "/home/andrea/anaconda3/envs/polar_lows_dl/lib/python3.12/site-packages/torch/cuda/__init__.py:716: UserWarning: Can't initialize NVML\n",
-      "  warnings.warn(\"Can't initialize NVML\")\n"
+      "/home/andrea/miniconda3/envs/polar-lows-env/lib/python3.12/site-packages/timm/models/_factory.py:117: UserWarning: Mapping deprecated model name xception to current legacy_xception.\n",
+      "  model = create_fn(\n"
      ]
     }
    ],
@@ -135,7 +112,7 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(filter(lambda p: p.requires_grad, torch_model.parameters()), lr=0.001)\n",
     "\n",
-    "model = ModelContainer.load_from_checkpoint(root / 'checkpoints' / 'xception-oct-13.ckpt', model=torch_model, criterion=criterion, optimizer=optimizer)\n",
+    "model = ModelContainer.load_from_checkpoint(root / 'checkpoints' / 'xception-xaug.ckpt', model=torch_model, criterion=criterion, optimizer=optimizer)\n",
     "\n",
     "_, data_prep = get_transforms(config.resized_image_res)"
    ]
@@ -222,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image path: ../data/train/pos/082f07_20190311T024310_20190311T024414_mos_rgb.png\n"
+      "Image path: /home/andrea/polar-lows-detection-forecasting-deep-learning/data/train/pos/082f07_20190311T024310_20190311T024414_mos_rgb.png\n"
      ]
     }
    ],
@@ -825,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -850,7 +827,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "polar_lows_dl",
+   "display_name": "polar-lows-env",
    "language": "python",
    "name": "python3"
   },
