--- a/additional_notebooks/ig_mask.ipynb
+++ b/additional_notebooks/ig_mask.ipynb
@@ -61,13 +61,18 @@
     "import numpy as np\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from PIL import Image\n",
     "\n",
-    "import config\n",
-    "from data_loader import create_data_loaders, get_transforms\n",
+    "from train_config import (\n",
+    "    train_dir,\n",
+    "    test_dir,\n",
+    "    resized_image_res,\n",
+    "    num_workers,\n",
+    "    transform_prep\n",
+    ")\n",
+    "from data_loader import create_data_loaders\n",
     "from image_utility import normalize_image\n",
     "from model_container import ModelContainer\n",
     "from models import XceptionModel"
@@ -75,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -104,22 +109,17 @@
     }
    ],
    "source": [
-    "batch_size = 1\n",
-    "_, val_loader, _ = create_data_loaders(root / config.train_dir, root / config.test_dir, config.resized_image_res, batch_size, config.num_workers)\n",
-    "\n",
     "torch_model = XceptionModel(num_classes=2)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(filter(lambda p: p.requires_grad, torch_model.parameters()), lr=0.001)\n",
     "\n",
-    "model = ModelContainer.load_from_checkpoint(root / 'checkpoints' / 'xception-xaug.ckpt', model=torch_model, criterion=criterion, optimizer=optimizer)\n",
-    "\n",
-    "_, data_prep = get_transforms(config.resized_image_res)"
+    "model = ModelContainer.load_from_checkpoint(root / 'checkpoints' / 'xception-xaug.ckpt', model=torch_model, criterion=criterion, optimizer=optimizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -144,7 +144,7 @@
     "if precalculated_ig:\n",
     "    image_path = root / 'data' / 'train' / 'pos' / '082f07_20190311T024310_20190311T024414_mos_rgb.png'\n",
     "else:\n",
-    "    pos_dir = os.path.join(root / config.train_dir, 'pos') # Directory of 'pos' images\n",
+    "    pos_dir = os.path.join(root / train_dir, 'pos') # Directory of 'pos' images\n",
     "    chosen_image = random.choice(os.listdir(pos_dir))\n",
     "    image_path = os.path.join(pos_dir, chosen_image)\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "# Prepare image\n",
     "original_image = Image.open(image_path).convert('RGB')\n",
-    "transformed_image = data_prep(original_image).unsqueeze(0)\n",
+    "transformed_image = transform_prep(original_image).unsqueeze(0)\n",
     "\n",
     "if precalculated_ig:\n",
     "    heatmap = np.load(root / 'local_test_files' / 'heatmap_train_pos_082f07_20190311T024310_20190311T024414_mos_rgb.npy')\n",
