Restructured code. Implemented Neptune logger. Bug fixes.

--- a/additional_notebooks/ig_mask.ipynb
+++ b/additional_notebooks/ig_mask.ipynb
@@ -48,7 +48,16 @@
     },
     "id": "Fd6u4OUwrBhD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andrea/miniconda3/envs/polar-lows-env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -67,12 +76,9 @@
     "\n",
     "from train_config import (\n",
     "    train_dir,\n",
-    "    test_dir,\n",
-    "    resized_image_res,\n",
-    "    num_workers,\n",
     "    transform_prep\n",
     ")\n",
-    "from data_loader import create_data_loaders\n",
+    "import attributions.integrated_gradients as ig\n",
     "from image_utility import normalize_image\n",
     "from model_container import ModelContainer\n",
     "from models import XceptionModel"
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -139,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "precalculated_ig = True\n",
+    "precalculated_ig = False\n",
     "\n",
     "if precalculated_ig:\n",
     "    image_path = root / 'data' / 'train' / 'pos' / '082f07_20190311T024310_20190311T024414_mos_rgb.png'\n",
@@ -158,14 +164,14 @@
     "    heatmap = np.load(root / 'local_test_files' / 'heatmap_train_pos_082f07_20190311T024310_20190311T024414_mos_rgb.npy')\n",
     "    predicted_class = 1\n",
     "else:\n",
-    "    heatmap, predicted_class = model.generate_integrated_gradients_heatmap(transformed_image)\n",
+    "    heatmap, predicted_class = ig.generate_heatmap(model.model, transformed_image)\n",
     "\n",
     "    # np.save(root / 'local_test_files' / 'heatmap_train_pos_082f07_20190311T024310_20190311T024414_mos_rgb.npy', heatmap)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -218,7 +224,7 @@
     "plt.title('Integrated Gradients Heatmap')\n",
     "plt.axis('off')\n",
     "\n",
-    "ig_overlayed = model.overlay_green_heatmap(original_image, heatmap, predicted_class)\n",
+    "ig_overlayed = ig.overlay_heatmap(transformed_image, heatmap, predicted_class)\n",
     "# Overlay heatmap on original image\n",
     "plt.subplot(1, 3, 3)\n",
     "plt.imshow(ig_overlayed)\n",
