--- a/doc/notebooks/gradcam_activation.ipynb
+++ b/doc/notebooks/gradcam_activation.ipynb
@@ -596,7 +596,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "polarlows",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
