added gradcam configs and fixed a few issues

--- a/doc/notebooks/dataset_mean_std.ipynb
+++ b/doc/notebooks/dataset_mean_std.ipynb
@@ -7,50 +7,72 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from pathlib import Path\n",
     "\n",
-    "root = Path('..').resolve()\n",
+    "from pathlib import Path\n",
+    "root = Path('../..').resolve()\n",
     "sys.path.insert(0, str(root))\n",
     "\n",
     "from torchvision import datasets, transforms\n",
     "\n",
-    "from data_utils import compute_dataset_mean_std\n",
-    "from train_config import train_dir"
+    "from src.data.utils import compute_dataset_mean_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = datasets.ImageFolder(\n",
-    "    train_dir('../'), \n",
-    "    transform=transforms.Compose([\n",
-    "        transforms.Resize((800, 800)),\n",
-    "        transforms.ToTensor()\n",
-    "    ])\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([0.2872, 0.2872, 0.4595]), tensor([0.1806, 0.1806, 0.2621]))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POLARLOWS - Mean: tensor([0.2872, 0.2872, 0.4595]), Std: tensor([0.1806, 0.1806, 0.2621])\n"
+     ]
     }
    ],
    "source": [
-    "compute_dataset_mean_std(train_data)"
+    "pl_train_dir = root / \"data/polar_lows/train\"\n",
+    "pl_image_size = (800, 800)\n",
+    "\n",
+    "pl_train_data = datasets.ImageFolder(\n",
+    "    pl_train_dir, \n",
+    "    transform=transforms.Compose([\n",
+    "        transforms.Resize(pl_image_size),\n",
+    "        transforms.ToTensor()\n",
+    "    ])\n",
+    ")\n",
+    "\n",
+    "pl_mean, pl_std = compute_dataset_mean_std(pl_train_data)\n",
+    "print(f\"POLARLOWS - Mean: {pl_mean}, Std: {pl_std}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CANCER - Mean: tensor([0.3289, 0.3288, 0.3288]), Std: tensor([0.2201, 0.2201, 0.2201])\n"
+     ]
+    }
+   ],
+   "source": [
+    "c_train_dir = root / \"data/breast_cancer/train\"\n",
+    "c_image_size = (480, 480)\n",
+    "\n",
+    "c_train_data = datasets.ImageFolder(\n",
+    "    c_train_dir, \n",
+    "    transform=transforms.Compose([\n",
+    "        transforms.Resize(c_image_size),\n",
+    "        transforms.ToTensor()\n",
+    "    ])\n",
+    ")\n",
+    "\n",
+    "c_mean, c_std = compute_dataset_mean_std(c_train_data)\n",
+    "print(f\"CANCER - Mean: {c_mean}, Std: {c_std}\")"
    ]
   },
   {
@@ -77,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
