added new dataset support

--- a/doc/notebooks/dataset_mean_std.ipynb
+++ b/doc/notebooks/dataset_mean_std.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/federici/miniconda3/envs/polarlows/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -48,20 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CANCER - Mean: tensor([0.3289, 0.3288, 0.3288]), Std: tensor([0.2201, 0.2201, 0.2201])\n"
+      "CANCER - Mean: tensor([0.2458, 0.2572, 0.2814]), Std: tensor([0.1491, 0.1544, 0.1675])\n"
      ]
     }
    ],
    "source": [
-    "c_train_dir = root / \"data/breast_cancer/train\"\n",
-    "c_image_size = (480, 480)\n",
+    "c_train_dir = root / \"data/bus_final/train\"\n",
+    "c_image_size = (512, 512)\n",
     "\n",
     "c_train_data = datasets.ImageFolder(\n",
     "    c_train_dir, \n",
